server/public/styles.css
body {
    background-image: url("BackgroundImg.svg");
    background-repeat: no-repeat;
    background-size:cover;
    font-family: "Roboto", sans-serif;
    display: flexbox;
    min-height: 100vh; 
}

.auth-button{
background-color: transparent;
color:#2C3333;
border: solid 1.5px #2C3333;
border-radius: 15px;
justify-content: center;
align-items: center;
display: flex;
box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
margin-left: 855px;
margin-top: 15px;
width:100px;
height: 30px;
text-align: center;
}

::-webkit-scrollbar {
width: 8px;               
}

::-webkit-scrollbar-track {
background: transparent;        
}

::-webkit-scrollbar-thumb {
background-color: hsla(9, 94%, 67%, 0.883);    
border-radius: 20px;      
}


.goals-container {
    display: flex;
    justify-content: center;
    margin-top: 35px;
}

.todo-container {
    /* overflow: scroll; */
    display:flex;
    position: relative;
    overflow-y: scroll;
    overflow-x: hidden;
    justify-content: center;
    /* background-color: whitesmoke; */
    width: 400px;
    height: 285px;
}

.todo-list {
    display: inline-block;
    
}

.noauth-button{
background-color: transparent;
color:#2C3333;
border: solid 1.5px #2C3333;
border-radius: 15px;
justify-content: center;
align-items: center;
display: flex;
box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
margin-left: 1141px;
margin-top: 15px;
width:100px;
height: 30px;
text-align: center;
}

.noauth-button:hover {
background-color: rgba(255, 255, 240, 0.625);
color:#2C3333;
border: solid 1.5px #2C3333;
border-radius: 15px;
}

.auth-button:hover {
background-color: rgba(255, 255, 240, 0.625);
color:#2C3333;
border: solid 1.5px #2C3333;
border-radius: 15px;
display: flexbox;
}

.nav-container{
width: 100%;
display: flex;
align-items: center;
}

.resolute-link{
font-family: 'Oxygen', sans-serif !important;
font-size: 48px;
font-weight: bolder;
text-decoration: none;
color:#2C3333;
margin-left: 30px;
text-shadow: 0px 5px 4px rgba(0, 0, 0, 0.15);
}

.links-container {
display: flex;
gap:25px;
color: #2C3333;
align-items: baseline;
margin-left: 72px;
margin-top: 25px;
}

.homepage-info {
margin-left: 30px;
}

.goalInput-text-box {
width: 97.6%;
height: 55px;
margin-top: 1px;
background-color: rgba(245, 245, 245, 0.454);
margin-left: 16px;
border: 1px solid #BD8123;
text-align: center;
font-size: 24px;
color: #2C3333;
box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

/* No Auth */

.goalInput-NoAuth:hover {
width: 97.6%;
height: 55px;
background-color: rgba(245, 245, 245, 0.454);
margin-left: 16px;
border: 1px solid #BD8123;
text-align: center;
font-size: 24px;
color: #2C3333;
cursor:not-allowed;
box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.goalInput-NoAuth {
width: 97.6%;
height: 55px;
margin-top: 1px;
background-color: rgba(245, 245, 245, 0.454);
margin-left: 16px;
border: 1px solid #BD8123;
text-align: center;
font-size: 24px;
color: #2C3333;
cursor:not-allowed;
box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.goalInput-text-box:hover {
width: 97.6%;
height: 55px;
background-color: rgba(245, 245, 245, 0.454);
margin-left: 16px;
border: 1px solid #BD8123;
text-align: center;
font-size: 24px;
color: #2C3333;
box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.goalInput-text-box:focus {
outline: none !important;
border: 1px solid #2C3333;
}

.goals-card {
background-color: rgba(229, 229, 229, 0.27);
margin-top: 100px;

width: 600px;
height: 360px;
border-radius: 23px 23px 0px 0px;
display: block;
margin-left: auto;
margin-right: auto;
border-top:    1px solid #2C3333;
border-right:  1px solid #2C3333; 
border-left: 1px solid #2C3333;
}

/* Mygoals display */

.mygoals-card {
background-color: rgba(229, 229, 229, 0.27);
margin-top: 140px;
width: 600px;
height: 400px;
border-radius: 23px;
display: block;
margin-left: auto;
margin-right: auto;
text-align: center;
color: #2C3333;
border-top:    1px solid #2C3333;
border-right:  1px solid #2C3333; 
border-left: 1px solid #2C3333;
border-bottom: 1px solid #2C3333;
box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.goals-card-button{
background-color: rgba(229, 229, 229, 0.27);
justify-content: center;
width: 601px;
border-radius: 0px 0px 23px 23px ;
height: 40px;
margin-top: 39px !important;
border: 1px solid #2C3333;
vertical-align: middle;
text-decoration: underline;
box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.goals-card-button:hover {
background-color: #fdb388d4;
}

/* No Auth Button */

.goals-button-noauth{
background-color: rgba(229, 229, 229, 0.27);  
justify-content: center;
width: 601px;
border-radius: 0px 0px 23px 23px ;
margin-top: 361px;
height: 40px;
border: 1px solid #2C3333;
vertical-align: middle;
text-decoration: underline;
box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.goals-button-noauth:hover {
cursor: not-allowed;
}

.footer a {
font-size: 14px;
color: #2C3333;
text-decoration: none !important;
text-align: center;
margin-top: 160px;
font-weight:500;
}

.footer {
font-size: 14px;
color: #2C3333;
text-decoration: none !important;
text-align: center;
margin-top: 145px;
}

/* .footerNA a {
    font-size: 14px;
    color: #2C3333;
    text-decoration: none !important;
    text-align: center;
    margin-top: 160px;
    font-weight:500;
}
    
.footerNA {
font-size: 14px;
color: #2C3333;
text-decoration: none !important;
text-align: center;
margin-top: 100px;
} */

.footer-quotes {
    display: flex;
    margin-left: 1145px;
    height: 200px;
    width:280px;
    
    margin-top: 70px;
    
}
.goals-link {
    white-space: nowrap;
    overflow: hidden;
}

.quotes-container {
    text-align: center;
    font-weight: lighter;
}


  /* .borat {
    display: flex;
    justify-content: center;
    align-items: center;
  } */

 

